<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clEvaluatedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Evaluation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/yellow_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_evaluation_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_icon"
            android:src="@drawable/ic_color_back"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/tv_BreweryEvaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/your_brewery_evaluated"
            android:textColor="@color/brewery_black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivBorderEvaluation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="41dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_Evaluation">

        <TextView
            android:id="@+id/tvBreweryEvaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/please_inform_your_email"
            android:textColor="@color/brewery_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_breweryEmail_evaluation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="120dp"
            android:hint="@string/hint_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBreweryEvaluation"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_email_evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_breweryEmail_evaluation" />

        <TextView
            android:id="@+id/tv_remember_email_evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto"
            android:text="@string/remember_email"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/checkbox_email_evaluation"
            app:layout_constraintTop_toBottomOf="@id/til_breweryEmail_evaluation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_btn_evaluation"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/yellow_rating"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/confirm"
            android:textColor="@color/gold"
            android:textSize="14sp"
            android:visibility="visible"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_remember_email_evaluation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBorderEvaluation">

        <TextView
            android:id="@+id/tv_blank_result_evaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/no_brewery_evaluated"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error_message_result_evaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/no_evaluated_yet"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_blank_result_evaluation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_Evaluation">

        <TextView
            android:id="@+id/tvBreweryFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/here_your_evaluated"
            android:textColor="@color/brewery_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResultsEvaluated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBreweryFavorite"
            tools:text="11" />

        <TextView
            android:id="@+id/tvFilterEvaluated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ordernar_por"
            android:textColor="@color/brewery_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvResultsEvaluated" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/nota"
            android:textColor="@color/brewery_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFilterEvaluated"
            app:layout_constraintStart_toEndOf="@+id/tvFilterEvaluated"
            app:layout_constraintTop_toTopOf="@+id/tvFilterEvaluated" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/evaluated_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterEvaluated"
            tools:listitem="@layout/card_item_brewery_evaluate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>