...
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_star" />

...
